# oj-monorepo

./: AGENTS.md  biome.json  package.json
apps/api/: biome.json  drizzle.config.ts  package.json
apps/api.v2/: drizzle.config.ts  package.json
apps/api.v2/src/: main.ts
apps/api.v2/src/modules/contest/: contest.controller.ts
apps/api.v2/src/modules/database/: database.module.ts  database.service.ts
apps/api/drizzle/20260618124706_setup_better_auth/: snapshot.json
apps/api/drizzle/20260619035951_setup_problems/: migration.sql  snapshot.json
apps/api/drizzle/20260620063754_setup_basics/: migration.sql  snapshot.json
apps/api/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/api/src/: main.ts
apps/api/src/modules/auth/: service.ts
apps/api/src/modules/db/: auth.schema.ts  connect.ts  enums.ts  schema.ts
apps/api/src/modules/submission/: connect.ts  index.ts
config/: api_server.example.toml  api_server_auth.example.toml  gateway.example.yaml  manager.example.toml  processor.example.toml  submission.example.toml
docs/: problems-api.md
scripts/: build-agent.fish
services/: Cargo.toml  Dockerfile.agent  Dockerfile.agent.standalone
services/crates/algorithm/: Cargo.toml
services/crates/algorithm/src/: ranking.rs
services/crates/algorithm/tests/: ranking.rs
services/crates/api_server/: Cargo.toml
services/crates/api_server/src/: config.rs  main.rs
services/crates/api_server/src/models/: enums.rs
services/crates/api_server/src/routers/: mod.rs
services/crates/api_server_auth/: Cargo.toml
services/crates/api_server_auth/src/: config.rs  lib.rs  main.rs
services/crates/api_server_db/: Cargo.toml
services/crates/api_server_db/src/: lib.rs
services/crates/api_server_db/src/models/: enums.rs  http.rs  mod.rs  submissions.rs
services/crates/api_server_db/src/repositories/: mod.rs  problems.rs  submissions.rs  test_cases.rs
services/crates/api_server_submission/: Cargo.toml
services/crates/api_server_submission/src/: config.rs  lib.rs  main.rs  message.rs  models_http.rs  router.rs
services/crates/auth/: Cargo.toml
services/crates/auth/src/: extractor.rs  router.rs  token.rs
services/crates/auth/src/models/: http.rs  mod.rs  refresh_tokens.rs  users.rs
services/crates/config_macro/: Cargo.toml
services/crates/config_macro/src/: lib.rs
services/crates/gateway/: Cargo.toml
services/crates/gateway/src/: config.rs  error.rs  jwks.rs  lib.rs  main.rs  router.rs  service.rs
services/crates/gateway/src/layers/: auth.rs  health.rs  mod.rs  rate_limit.rs  route.rs
services/crates/gateway/src/rate_limiter/: memory.rs  mod.rs
services/crates/gateway/src/services/: gateway.rs  mod.rs  proxy.rs
services/crates/judge_core_agent/src/verdict/: cpp.rs
services/crates/judge_core_manager/: Cargo.toml
services/crates/judge_core_manager/src/: config.rs  main.rs
services/crates/judge_core_shared/: Cargo.toml
services/crates/judge_core_standalone/: Cargo.toml
services/crates/judge_core_standalone/src/: main.rs
services/crates/service_utils/: Cargo.toml
services/crates/service_utils/src/: lib.rs
services/crates/submission_processor/: Cargo.toml
services/crates/submission_processor/src/: config.rs  error.rs  main.rs  message.rs  rabbitmq.rs
services/docker/: Dockerfile.api_server  Dockerfile.api_server_auth  Dockerfile.api_server_submission  Dockerfile.submission_processor
services/judge-core/: Cargo.toml  Dockerfile.agent  Dockerfile.agent.standalone
services/judge-core/crates/agent/: Cargo.toml  Dockerfile
services/judge-core/crates/agent/src/: lib.rs  main.rs
services/judge-core/crates/agent/src/limit/: cgroup.rs  mod.rs  seccomp.rs
services/judge-core/crates/agent/src/verdict/: cpp.rs  mod.rs
services/judge-core/crates/judge_core_sdk/: Cargo.toml
services/judge-core/crates/judge_core_sdk/src/: lib.rs
services/judge-core/crates/manager/: Cargo.toml
services/judge-core/crates/manager/src/: main.rs  pool.rs  provisioner.rs  router.rs  scaler.rs
services/judge-core/crates/shared/: Cargo.toml
services/judge-core/crates/shared/src/: lib.rs  protocol.rs  utilities.rs
services/judge-core/crates/shared/src/models/: http.rs  mod.rs
services/judge-core/crates/standalone/src/: main.rs
services/submission-processor/: package.json
