[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
tokio = "1.52.3"
postcard = "1.1.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
libc = "0.2.186"
tower-http = "0.7.0"
sea-orm = "2.0.0-rc"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
axum = "0.8.9"
uuid = "1.23.4"
chrono = "0.4.45"
config = "0.15.24"
serde_json = "1.0.150"

confide = "0.1"
judge_core_shared = { path = "./crates/judge_core_shared" }
judge_core_agent = { path = "./crates/judge_core_agent" }
judge_core_sdk = { path = "./crates/judge_core_sdk" }
auth = { path = "./crates/auth" }
api_server_db = { path = "./crates/api_server_db" }
