[package]
name = "api_server"
edition.workspace = true
version = "0.1.0"

[dependencies]
sea-orm = { workspace = true, features = ["macros", "sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
auth = { path = "../auth" }
serde = { workspace = true }
confide = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
api_server_db = { path = "../api_server_db" }
