[package]
name = "api_server_db"
edition.workspace = true
version = "0.1.0"

[dependencies]
sea-orm = { workspace = true, features = ["macros", "sqlx-postgres", "runtime-tokio-rustls"] }
auth = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
judge_core_shared = { workspace = true }
serde_json = { workspace = true }
