[package]
name = "api_server_submission"
edition.workspace = true
version = "0.1.0"

[dependencies]
tokio = { workspace = true, features = ["net", "signal", "rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
service_utils = { workspace = true }
api_server_db = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
auth = { workspace = true }
lapin = { workspace = true }
serde_json = { workspace = true }
judge_core_shared = { workspace = true }
config = { workspace = true }
confide = { workspace = true }
