[package]
name = "gateway"
edition.workspace = true
version = "0.1.0"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
hyper = { version = "1.10.1", features = ["client", "http1", "http2", "server"] }
http = "1.4.2"
bytes = "1.12.0"
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "http2", "server", "tokio"] }
http-body-util = "0.1.3"
auth = { workspace = true }
jsonwebtoken = "10.4.0"
base64 = "0.22.1"
serde_json = "1.0.149"
governor = "0.10.4"
moka = { version = "0.12.15", features = ["sync"] }
uuid = { workspace = true }
