[package]
name = "judge_core_manager"
edition.workspace = true

[dependencies]
containerd-client = "0.9.0"
prost-types = "0.14"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync", "time", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
judge_core_shared = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }
oci-spec = "0.10.0"
sha2 = "0.11"
libc = { workspace = true }
axum = { workspace = true }
service_utils = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
serde = { workspace = true }
config = { workspace = true }
confide = { workspace = true }
