[package]
name = "submission_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
lapin = "4.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
futures-util = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
judge_core_sdk = { path = "../judge_core_sdk" }
judge_core_shared = { path = "../judge_core_shared" }
api_server_db = { path = "../api_server_db" }
confide = { workspace = true }
uuid = { workspace = true }
