[package]
name = "submission_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
lapin = "4.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
futures-util = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
judge_core_sdk = { workspace = true }
judge_core_shared = { workspace = true }
api_server_db = { workspace = true }
confide = { workspace = true }
uuid = { workspace = true }
