[package]
name = "manager"
edition.workspace = true

[dependencies]
containerd-client = "0.9.0"
prost-types = "0.14"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync", "time", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
shared = { workspace = true }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
oci-spec = "0.10.0"
libc = { workspace = true}
